[tool.poetry]
name = "etl"
version = "0.1.0"
description = "ETL code for pop the bubble"
authors = ["Raaid Arshad <raaid@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
dagit = "^0.12.1"
dagster = "^0.12.1"
feedparser = "^6.0.8"
flask = "^2.0.1"
gunicorn = "^20.1.0"
pandas = "^1.3.0"
psycopg2 = "^2.9.1"
pydantic = "^1.8.2"
pyyaml = "^5.4.1"
requests = "^2.25.1"
scikit-learn = "^0.24.2"
spacy = "^3.1.0"
sqlalchemy = "^1.4.20"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
