[tool.poetry]
name = "public-server"
version = "0.1.0"
description = ""
authors = ["Raaid <raaid@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ptbmodels = "0.2.17.dev2"
fastapi = "^0.74.1"
psycopg = "^3.0.9"
uvicorn = {version = "^0.17.5", extras = ["standard"]}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
