[tool.poetry]
name = "ptb_etl"
version = "0.1.0"
description = "Application code for pop the bubble etl"
authors = ["Raaid Arshad <raaid@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
boto3 = "^1.20.21"
dagster = "^0.12.1"
dagster-k8s = "^0.12.1"
dagster-postgres = "^0.12.1"
python-dateutil = "^2.8.2"
feedparser = "^6.0.8"
psycopg2 = "^2.9.1"
ptbmodels = "^0.2.15"
pydantic = "^1.8.2"
requests = "^2.25.1"
scikit-learn = "^1.0"
spacy = "^3.1.0"
sqlalchemy = "^1.4.20"
sqlmodel = "^0.0.4"

[tool.poetry.dev-dependencies]
dagit = "^0.12.1"
pytest = "^6.2.4"
pytest-order = "^1.0.0"
