[tool.poetry]
name = "ptbmodels"
version = "0.2.16"
description = "SQLModel common code for Pop the Bubble"
authors = ["Raaid <raaid@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
sqlmodel = "^0.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
psycopg2 = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
