[tool.poetry]
name = "ptb_website"
version = "0.1.0"
description = "Application code for pop the bubble website"
authors = ["Raaid Arshad <raaid@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^0.7.0"
#python-dateutil = "^2.8.2"
feedparser = "^6.0.8"
fastapi = "^0.68.1"
#psycopg2 = "^2.9.1"
#pydantic = "^1.8.2"
#sqlalchemy = "^1.4.20"
#sqlmodel = "^0.0.4"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
